# Missoula-Pro-Am-Manager

./: .gitattributes  .gitignore  .railwayignore  CLAUDE.md  Client Notes.md  DESIGN.md  DEVELOPMENT.md  EntryFormReqs.md  FlightLogic.md  POST_2026_STATE.md  ProAM requirements  ProAmRelay.md  Procfile  README.md  RELEASE_v2026.final.md  SCORING_AUDIT.md  Tournament Wishlist.md  USER_GUIDE.md  app.py  arapaho_glossary.json  config.py  database.py  pyproject.toml  pyrightconfig.json  pytest.ini  railway.toml  requirements.txt  strings.py
docs/: BIRLING_RECON.md  DOMAIN_CONTRACT.md  GEAR_SHARING_AUDIT.md  GEAR_SHARING_DOMAIN.md  GITHUB_REQUIRED_SETTINGS.md  HEAT_FLIGHT_AUDIT.md  JUDGE_TRAINING_CURRICULUM.md  MARK_ASSIGNMENT_WORKFLOW.md  PLAN_REVIEW.md  POSTGRES_MIGRATION.md  PRE_DEPLOY_QA_2026-04-10.md  QA_REPORT.md  RELEASE_CHECKLIST.md  ROLLBACK_SOP.md  ROOT_CAUSES_AND_CLEANUP_ORDER.md  SHOWPREP_WORKFLOW_RECON.md  VIDEO_JUDGE_BRACKET_PLAN.md  WOODBOSS_AUDIT.md  domain_conflicts.json
instance/: proam.db
migrations/: env.py
models/: __init__.py  audit_log.py  background_job.py  competitor.py  event.py  heat.py  payout_template.py  print_email_log.py  print_tracker.py  pro_event_rank.py  school_captain.py  team.py  tournament.py  user.py  wood_config.py
routes/: __init__.py  api.py  auth.py  demo_data.py  domain_conflicts.py  import_routes.py  main.py  partnered_axe.py  portal.py  proam_relay.py  registration.py  reporting.py  scheduling.py  scoring.py  strathmark.py  validation.py  woodboss.py
scripts/: __init__.py  diagnose_unplaced_competitors.py  load_test_race_day.py  profile_spectator_endpoint.py  qa_print_hub.py  qa_solo_heat_placement.py  repair_springboard_handedness.py  smoke_test.py  verify_security_headers.sh
services/: __init__.py  ala_report.py  audit.py  background_jobs.py  backup.py  birling_bracket.py  birling_print.py  cache_invalidation.py  domain_conflicts.py  email_delivery.py  excel_io.py  flight_builder.py  gear_sharing.py  handicap_export.py  heat_generator.py  judge_sheet.py  logging_setup.py  mark_assignment.py  name_match.py  partner_matching.py  partner_resolver.py  partnered_axe.py  point_calculator.py  preflight.py  print_catalog.py  print_response.py  pro_entry_importer.py  proam_relay.py  registration_import.py  report_cache.py  reporting_backup.py  reporting_export.py  restore_workflow.py  saw_block_assignment.py  schedule_builder.py  schedule_generation.py  schedule_status.py  scoring_engine.py  scoring_workflow.py  scratch_cascade.py  (+9 more)
static/: offline_queue.js  sw.js
templates/: _sidebar.html  _tournament_tabs.html  base.html  dashboard.html  ops_dashboard.html  role_entry.html  tournament_detail.html  tournament_new.html  tournament_setup.html
tests/: conftest.py  db_test_utils.py  test_ability_rankings_event_filter.py  test_ability_rankings_post_wipe_edgecase.py  test_admin_audit_hardening.py  test_api_endpoints.py  test_axe_throw_qualifiers.py  test_birling_bracket.py  test_birling_bracket_12.py  test_birling_bracket_9.py  test_birling_index_route.py  test_birling_print.py  test_birling_stale_shape_migration.py  test_bull_belle_tiebreak.py  test_chokerman_placement_preserved.py  test_college_import_e2e.py  test_competitor_my_results.py  test_competitor_portal.py  test_csrf_error_handler.py  test_css_modal_safety.py  test_day_of_operations.py  test_day_split_mandatory_routing.py  test_db_constraints.py  test_domain_conflicts.py  test_dq_and_status_reason.py  test_dual_timer_entry.py  test_edge_cases.py  test_email_delivery.py  test_empty_state_portals.py  test_excel_io.py  test_flask_reliability.py  test_flight_build_full_stack.py  test_flight_builder.py  test_fuzz_scoring.py  (+103 more)
(+228 files in other folders)
