[project]
name = "missoula-pro-am-manager"
version = "2.14.13"
description = "Tournament management system for the Missoula Pro-Am timbersports competition"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Alex Kaper" }]

# Runtime dependencies live in requirements.txt — Railway reads that file
# directly during deploy. Do NOT duplicate them here. This file is for tool
# configuration and dev-only extras.

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
# pytest.ini is the source of truth for pytest config. This block is a
# fallback for tools that look at pyproject.toml first.
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["routes", "services", "models"]
omit = ["tests/*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "migrations/versions",
    "instance",
    "uploads",
    "static",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Pragmatic ignore list — these existed in the codebase before linting was wired
# up. We do NOT want a 477-error CI red-out 18 days before live deploy. Tighten
# this list incrementally after the show.
ignore = [
    "E501",  # line-too-long — many existing strings are long
    "E702",  # multiple-statements-on-one-line-semicolon
    "E711",  # comparison-to-none — pre-existing in 1 spot
    "E722",  # bare-except — pre-existing in 3 spots
    "E741",  # ambiguous-variable-name
    "F401",  # unused-import — Flask/SQLAlchemy use side-effect imports; auto-removal is unsafe
    "F811",  # redefined-while-unused — same risk
    "F841",  # unused-variable — common in test fixtures
]

[tool.ruff.lint.per-file-ignores]
# Test files frequently bind unused variables for clarity / future use
"tests/*" = ["F841"]
# Migrations are auto-generated; we don't lint them
"migrations/versions/*" = ["E", "F", "W", "I"]
# Sub-module imports MUST come after scheduling_bp and shared helpers are
# defined — this is intentional to avoid circular imports.
"routes/scheduling/__init__.py" = ["E402"]
# api.py defines a custom JSON encoder before imports; import_routes.py
# has logging setup before imports.  Both are intentional.
"routes/api.py" = ["E402"]
"routes/import_routes.py" = ["E402"]
